<resources>
    <string name="app_name">ButtonRadioCalcular</string>
    <string name="txt_Introduce_el_numero_1">Introduce el número 1</string>
    <string name="txt_Introduce_el_numero_2">Introduce el número 2</string>
    <string name="txt_Sumar">Sumar</string>
    <string name="txt_Restar">Restar</string>
    <string name="txt_Calcular">Calcular</string>
    <string name="txt_Resultado">Resultado</string>
    <string name="mensaje">"Selecciona una opción \ny llena los \ncampos"</string>
</resources>