<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txt_num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/txt_Introduce_el_numero_1"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/txt_Introduce_el_numero_2"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_num1" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:onClick="calcular"
        android:text="@string/txt_Calcular"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/text_resultado"
        android:layout_width="214dp"
        android:layout_height="57dp"
        android:layout_marginTop="472dp"
        android:text="@string/txt_Resultado"
        android:lines="3"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="256dp"
        android:layout_height="262dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_num2">

        <RadioButton
            android:id="@+id/radio_button_1"
            android:layout_width="119dp"
            android:layout_height="46dp"
            android:layout_marginTop="0dp"
            android:text="@string/txt_Sumar"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radio_button_2"
            android:layout_width="120dp"
            android:layout_height="47dp"
            android:layout_marginTop="0dp"
            android:text="@string/txt_Restar"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radio_button_multiplicar"
            android:layout_width="185dp"
            android:layout_height="47dp"
            android:layout_marginTop="0dp"
            android:text="Multiplicar"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radio_button_dividir"
            android:layout_width="185dp"
            android:layout_height="47dp"
            android:layout_marginTop="0dp"
            android:text="División"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radio_button_modulo"
            android:layout_width="185dp"
            android:layout_height="47dp"
            android:layout_marginTop="0dp"
            android:text="Módulo"
            android:textSize="24sp" />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>